Tidy up code, implement basic renderer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,9 +80,10 @@
 		"xstddef": "cpp",
 		"xstring": "cpp",
 		"xtr1common": "cpp",
-		"xutility": "cpp"
+		"xutility": "cpp",
+		"xhash": "cpp"
 	},
 	"cmake.debugConfig": {
 		"cwd": "${workspaceFolder}"
-	},
+	}
 }
