Fix kD tree building and traversal, still some minor issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,7 +83,9 @@
 		"xutility": "cpp",
 		"xhash": "cpp",
 		"semaphore": "cpp",
-		"typeindex": "cpp"
+		"typeindex": "cpp",
+		"bitset": "cpp",
+		"future": "cpp"
 	},
 	"cmake.debugConfig": {
 		"cwd": "${workspaceFolder}"
