--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,8 @@
 		"future": "cpp",
 		"forward_list": "cpp",
 		"unordered_set": "cpp",
-		"valarray": "cpp"
+		"valarray": "cpp",
+		"stack": "cpp"
 	},
 	"cmake.debugConfig": {
 		"cwd": "${workspaceFolder}"
