Add multithreaded rendering, untested thread pool, attempts at parallelizing kD tree construction (achieved only 2x boost)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,7 +89,10 @@
 		"forward_list": "cpp",
 		"unordered_set": "cpp",
 		"valarray": "cpp",
-		"stack": "cpp"
+		"stack": "cpp",
+		"execution": "cpp",
+		"queue": "cpp",
+		"span": "cpp"
 	},
 	"cmake.debugConfig": {
 		"cwd": "${workspaceFolder}"
